# quantum_distance_bounding

./: .gitignore  README.md  pyproject.toml  requirements.txt
basic/: common_functions.py  register_manager.py
basic/qdb2017/: distance_fraud.ipynb  mafia_fraud_intercept.ipynb  protocol.ipynb
basic/qdb2019/: mafia_fraud_intercept.ipynb  protocol.ipynb
basic/qdb2023/: protocol_mutual.ipynb  protocol_oneway.ipynb
basic/qkd/: qkdeve.ipynb  qkdnoeve.ipynb
cv/: distance_fraud.ipynb  mafia_fraud_intercept.ipynb  mafia_fraud_preask.ipynb  protocol.ipynb  reflection_attack.ipynb
e91/: protocol.ipynb
its/: distance_fraud.ipynb  mafia_fraud_intercept.ipynb  protocol.ipynb  reflection.ipynb
